@@ -1,3 +1,8 @@
+2007-10-23  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-metafile.c:
+	Use new gio uri escape functions instead of gnome-vfs
+
 2007-10-22  Alexander Larsson  <alexl@redhat.com>
 
         * src/nautilus-location-entry.c:
